Fixed multiple flag errors

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <img src="./flags/Morocco.png" alt="arg">
     <img src="./flags/Mozambique.png" alt="arg">
     <img src="./flags/Myanmar.png" alt="arg">
-    <img src="./flags/nam.png" alt="arg">
+    <img src="./flags/Namibia.png" alt="arg">
     <img src="./flags/Nepal.png" alt="arg">
     <img src="./flags/Netherlands.png" alt="arg">
     <img src="./flags/New_Caledonia.png" alt="arg">
