Personal project changes

--- a/index.html
+++ b/index.html
@@ -232,5 +232,16 @@
     <img src="./flags/Zanzibar.png" alt="arg">
     <img src="./flags/Zambia.png" alt="arg">
     <img src="./flags/Zimbabwe.png" alt="arg">
+    <img src="./flags/Dalia.png" alt="arg">
+    <img src="./flags/Prussian_Commonwealth.png" alt="arg">
+    <img src="./flags/Ru3btla.png" alt="arg">
+    <img src="./flags/Sessia.png" alt="arg">
+    <img src="./flags/Suforan.png" alt="arg">
+    <img src="./flags/Ceverelya.png" alt="arg">
+    <img src="./flags/Filissia.png" alt="arg">
+    <img src="./flags/Achtenheim.png" alt="arg">
+    <img src="./flags/Inner_Sessia.png" alt="arg">
+    <img src="./flags/Szesznya.png" alt="arg">
+
 </body>
 </html>
